--- a/content/modals/marine_life/mpa_vs_not.Rmd
+++ b/content/modals/marine_life/mpa_vs_not.Rmd
@@ -1,6 +1,8 @@
 ```{r mpa compare imports, include=FALSE}
 library(glue)
 # also uses robis
+
+source("../../obis_cache.R")
 ```
 
 ```{r mpa areas}
@@ -27,15 +29,28 @@ outside_mpas <- glue("MULTIPOLYGON (({fknms},{eastern_sambo}))")
 
 ```{r fetch mpa compare data}
 species_name <- "Ocyurus chrysurus"
-inside_occurrence <- robis::occurrence(
-    species_name,
-    geometry = inside_mpas
-)
-outside_occurrence <- robis::occurrence(
-    species_name,
-    geometry = outside_mpas
+species_name_safe <- sanitize_query_id(species_name)
+inside_query_id  <- glue( "mpa_inside_{species_name_safe}")
+outside_query_id <- glue("mpa_outside_{species_name_safe}")
 
-)
+if (has_cache(inside_query_id)){
+    inside_occurrence <- load_cache(inside_query_id)
+} else {
+    inside_occurrence <- robis::occurrence(
+        species_name,
+        geometry = inside_mpas
+    )
+    save_cache(inside_query_id, inside_occurrence)
+}
+if (has_cache(outside_query_id)){
+    outside_occurrence <- load_cache(outside_query_id)
+} else {
+    outside_occurrence <- robis::occurrence(
+        species_name,
+        geometry = outside_mpas
+    )
+    save_cache(outside_query_id, outside_occurrence)
+}
 ```
 
 ```{r mpa compare timeseries, echo=FALSE}
