--- a/content/modals/marine_life/fauna/index.Rmd
+++ b/content/modals/marine_life/fauna/index.Rmd
@@ -19,6 +19,8 @@ source("./../obis_plot_comparison.R")
 ## Fish abundance, diversity, size and species
 Relevant analysis in 2018 from @mhepner presented in the [FKNMS infographic](https://marinebon.github.io/info-fk/corals.html).
 
+TODO: Raw RVC data used in that analysis is accessible via [sefsc.noaa.gov](https://grunt.sefsc.noaa.gov/rvc_analysis20/).
+
 ### Snapper/grouper vs parrotfish (targeted/non-targeted)
 #### MBON IOOS Portal
 The [MBON IOOS Portal](https://mbon.ioos.us) was used to create a data view comparing [Reef Visual Census data](https://mbon.ioos.us/#metadata/53cb8d58-ae4d-43e1-aea3-640db9491db2/875de156-d933-4373-bb09-486c25eccfb2) for grouper and parrotfish.
