update to plo7y 0.1.0+ usage

--- a/content/modals/marine_life/fauna/index.Rmd
+++ b/content/modals/marine_life/fauna/index.Rmd
@@ -88,7 +88,7 @@ obis_plot_comparison(scaridae_occurrence, lutjanidae_occurrence)
 ```
 
 ```{python compare occurrence data}
-from plo7y.ts_compare.ts_compare import ts_compare
+from plo7y.reporters.ts_compare import ts_compare
 ts_compare(
     "occurrences.csv",
     x_key="eventDate",
