--- a/content/modals/marine_life/fauna/index.Rmd
+++ b/content/modals/marine_life/fauna/index.Rmd
@@ -87,7 +87,7 @@ write.csv(occurrences, "occurrences.csv")
 obis_plot_comparison(scaridae_occurrence, lutjanidae_occurrence)
 ```
 
-```{python compare occurrence data}
+```{python compare occurrence data, eval=F}
 from plo7y.ts_compare.ts_compare import ts_compare
 ts_compare(
     "occurrences.csv",
